force-app/main/default/objects/Remote_Access__c/Remote_Access__c.object-meta.xml
<CustomObject>
    <description>Server Profiles for Accounts - includes Server name, IP, function, and notes</description>
    <label>Remote Access Notes</label>
    <nameField>
        <label>Remote Access Notes</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Remote Access Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>