force-app/main/default/objects/Remote_Access__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Server_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>