force-app/main/default/objects/Remote_Access__c/fields/Connection_Method__c.field-meta.xml
<CustomField>
    <fullName>Connection_Method__c</fullName>
    <description>Method used to connect to this server in the profile</description>
    <inlineHelpText>Choose the application used to connect to this server</inlineHelpText>
    <label>Connection Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Citrix</fullName>
            </value>
            <value>
                <fullName>Terminal Services</fullName>
            </value>
            <value>
                <fullName>Nortel</fullName>
            </value>
            <value>
                <fullName>ATT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>