force-app/main/default/objects/Remote_Access__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <description>Server domain</description>
    <inlineHelpText>Enter the domain for this server</inlineHelpText>
    <label>Domain</label>
    <length>15</length>
    <type>Text</type>
</CustomField>