force-app/main/default/objects/Remote_Access__c/fields/IP_Address__c.field-meta.xml
<CustomField>
    <fullName>IP_Address__c</fullName>
    <description>Server&apos;s IP Address</description>
    <inlineHelpText>Enter the server&apos;s IP address.  Ex. 10.20.300.40</inlineHelpText>
    <label>IP Address</label>
    <length>20</length>
    <type>Text</type>
</CustomField>