force-app/main/default/objects/Remote_Access__c/fields/RDP_Login_Username__c.field-meta.xml
<CustomField>
    <fullName>RDP_Login_Username__c</fullName>
    <description>RDP Login Username in Server Profile record</description>
    <inlineHelpText>Enter the Remote Desktop username for this server</inlineHelpText>
    <label>RDP Login Username</label>
    <length>20</length>
    <type>Text</type>
</CustomField>