force-app/main/default/objects/Remote_Access__c/fields/RDP_Password__c.field-meta.xml
<CustomField>
    <fullName>RDP_Password__c</fullName>
    <description>RDP Password on Server Profile record</description>
    <inlineHelpText>Enter the Remote Desktop password for this server</inlineHelpText>
    <label>RDP Password</label>
    <length>20</length>
    <type>Text</type>
</CustomField>