force-app/main/default/objects/Remote_Access__c/fields/Server_Farm_Name__c.field-meta.xml
<CustomField>
    <fullName>Server_Farm_Name__c</fullName>
    <description>Server Farm Name</description>
    <inlineHelpText>Enter the Server Farm Name</inlineHelpText>
    <label>Server Farm Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>