force-app/main/default/objects/Remote_Access__c/fields/Server_Function__c.field-meta.xml
<CustomField>
    <fullName>Server_Function__c</fullName>
    <description>Server Function</description>
    <inlineHelpText>Choose the server&apos;s function.</inlineHelpText>
    <label>Server Function</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Database Server</fullName>
            </value>
            <value>
                <fullName>Application Server</fullName>
            </value>
            <value>
                <fullName>BDC (Backup Domain Controller)</fullName>
            </value>
            <value>
                <fullName>Citrix Application Server</fullName>
            </value>
            <value>
                <fullName>Citrix Web Interface Server</fullName>
            </value>
            <value>
                <fullName>Clustered Server</fullName>
            </value>
            <value>
                <fullName>Domain Controller</fullName>
            </value>
            <value>
                <fullName>File Server</fullName>
            </value>
            <value>
                <fullName>Firewall Server</fullName>
            </value>
            <value>
                <fullName>Java Config Server</fullName>
            </value>
            <value>
                <fullName>MC Server</fullName>
            </value>
            <value>
                <fullName>MC Services Server</fullName>
            </value>
            <value>
                <fullName>RIC Server</fullName>
            </value>
            <value>
                <fullName>Route History Server</fullName>
            </value>
            <value>
                <fullName>SuperMatrix Server</fullName>
            </value>
            <value>
                <fullName>Terminal Server</fullName>
            </value>
            <value>
                <fullName>VMWare Server</fullName>
            </value>
            <value>
                <fullName>Web Server</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>