force-app/main/default/objects/Remote_Access__c/fields/Server_Name__c.field-meta.xml
<CustomField>
    <fullName>Server_Name__c</fullName>
    <description>Server Name</description>
    <inlineHelpText>Enter the Server Name for this profile.  Ex. mcservices1</inlineHelpText>
    <label>Server Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>