force-app/main/default/objects/Remote_Access__c/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <description>Services</description>
    <inlineHelpText>Choose the services running on this server</inlineHelpText>
    <label>Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Event Processor</fullName>
            </value>
            <value>
                <fullName>Handheld EQ 4.0</fullName>
            </value>
            <value>
                <fullName>HH Comm Service (LAN)</fullName>
            </value>
            <value>
                <fullName>HH Com Service (WWAN)</fullName>
            </value>
            <value>
                <fullName>IP Server</fullName>
            </value>
            <value>
                <fullName>iTrak</fullName>
            </value>
            <value>
                <fullName>Jackson WMX Service</fullName>
            </value>
            <value>
                <fullName>Java Communicator Service</fullName>
            </value>
            <value>
                <fullName>Multi User Lock Service</fullName>
            </value>
            <value>
                <fullName>Route Exception Service</fullName>
            </value>
            <value>
                <fullName>Route History Service</fullName>
            </value>
            <value>
                <fullName>Stop Alerter</fullName>
            </value>
            <value>
                <fullName>SuperMatrix</fullName>
            </value>
            <value>
                <fullName>Web Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>