force-app/main/default/objects/Remote_Access__c/fields/SP_Comments__c.field-meta.xml
<CustomField>
    <fullName>SP_Comments__c</fullName>
    <description>Server Profile Comments</description>
    <inlineHelpText>Add any Server Profile comments</inlineHelpText>
    <label>Server Profile Comments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>